调整学术成果管理接口